# frontend

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
code/bluetext-model/: Cargo.toml
code/bluetext-model-core/: Cargo.toml
code/bluetext-model-core/src/: entry.rs  lib.rs  metadata.rs  resonate.rs  simulation.rs  tests.rs  workflow.rs
code/bluetext-model-core/src/stores/: couchbase.rs  mod.rs  redpanda.rs
code/bluetext-model-macros/: Cargo.toml
code/bluetext-model-macros/src/: analysis.rs  commands.rs  flow_walker.rs  lib.rs  metadata.rs  model_macro.rs  state_machine.rs
code/bluetext-model/src/: lib.rs
code/bluetext-model/tests/: integration.rs  workflow_impl_integration.rs  workflow_integration.rs
code/clients/: Cargo.toml
code/models/: Cargo.toml
code/services/api/: .mirrord.json  Cargo.toml  Dockerfile
code/services/api/src/: main.rs
code/services/kong/: Dockerfile
code/services/web-app/: package.json  vite.config.ts
code/services/web-app/.lovable/: plan.md
code/services/web-app/app/: entry.client.tsx  root.tsx
code/services/web-app/src/: styles.css
config/: bluetext.yaml
config/kong/: kong.yaml
config/services/: api.yaml  kong.yaml  web-app.yaml
config/services/api/: metadata.yaml
config/services/api/base/: deployment.yaml  ingress.yaml  service.yaml
config/services/api/development/: patches.yaml
config/services/kong/: metadata.yaml
config/services/kong/base/: deployment.yaml  ingress.yaml  service.yaml
model/: Cargo.toml  model.json
model/src/: lib.rs  main.rs
(+9 files in other folders)
