[package]
name = "bluetext-model-core"
version = "0.1.0"
edition = "2024"

[features]
couchbase = ["dep:couchbase"]
redpanda = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.9", features = ["small_rng"] }
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
resonate = { git = "https://github.com/resonatehq/resonate-sdk-rust-next", rev = "e867728978bb447567c5f34cf380d537755eb9c4" }
couchbase = { version = "1", optional = true }
