[package]
name = "bluetext-model"
version = "0.1.0"
edition = "2024"

[features]
couchbase = ["bluetext-model-core/couchbase"]

[dependencies]
bluetext-model-core = { path = "../bluetext-model-core" }
bluetext-model-macros = { path = "../bluetext-model-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
